lab3: updated cognito pool setting

--- a/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_employee_cognito_pool.yaml
@@ -89,6 +89,9 @@ Resources:
       - Fn::Sub:
         - "${UserPoolProviderUrl}/oauth2/idpresponse"
         - UserPoolProviderUrl: !GetAtt  CognitoAuthorizerUserPool.ProviderURL
+      - Fn::Sub:
+        - "https://internal.${DomainName}:8443/loggedout.html"
+        - DomainName: !Ref PublicDnsNameParam
       ClientName: employee-alb-cognito-client
       GenerateSecret: true
       LogoutURLs:
