lab3 - #24 Updates post test deployment

--- a/labs/lab3-non-kinesis-example/cloudformation/6000_s3_events_bucket.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/6000_s3_events_bucket.yaml
@@ -123,6 +123,7 @@ Resources:
         Rule: 
           DefaultRetention: 
             Days: 7
+            Mode: "COMPLIANCE"
       ObjectLockEnabled: true
       Tags: 
       - Key: Purpose
