--- a/labs/lab3-non-kinesis-example/cloudformation/5225_web_site_api_lambda_functions.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5225_web_site_api_lambda_functions.yaml
@@ -176,6 +176,80 @@ Resources:
       Runtime: "python3.8"
       Timeout: 30
 
+  
+#######################################################################################################################
+###                                                                                                                 ###
+###                                  LAMBDA FUNCTION: Link Employee to Access Card                                  ###
+###                                                                                                                 ###
+#######################################################################################################################
+
+  EmpCardLinkLambdaFunctionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Sid: "EmpCardLinkFunctionRoleAssumeRolePolicyDocument"
+          Effect: "Allow"
+          Principal:
+            Service: "lambda.amazonaws.com"
+          Action: "sts:AssumeRole"
+      Description: "Lambda role EmpCardLinkLambdaFunction"
+      Policies:
+      - PolicyName: EmpCardLinkLambdaFunctionPolicy01
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: "Allow"
+            Action:
+            - "logs:CreateLogGroup"
+            - "logs:CreateLogStream"
+            - "logs:PutLogEvents"
+            Resource: arn:aws:logs:*:*:*
+      - PolicyName: EmpCardLinkLambdaFunctionPolicy02
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: "Allow"
+            Action:
+            - "dynamodb:Query"
+            Resource:
+              Fn::Sub:
+              - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}"
+              - TableName: 
+                  Fn::ImportValue: !Sub "${DynamoDbStackName}-AccessCardAppTableName"
+      RoleName: EmpCardLinkLambdaFunctionRole
+
+  EmpCardLinkLambdaFunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    DeletionPolicy: Delete
+    UpdateReplacePolicy: Delete
+    Properties:
+      LogGroupName:
+        Fn::Sub:
+        -  "/aws/lambda/${functionRef}"
+        - functionRef: !Ref EmpCardLinkLambdaFunction
+      RetentionInDays: 7
+
+  EmpCardLinkLambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties: 
+      Architectures: 
+      - "arm64"
+      Environment:
+        Variables: 
+          DEBUG: "1"
+      Code: 
+        S3Bucket: !Ref S3SourceBucketParam
+        S3Key: "link_employee_and_access_card.zip"
+      Description: "Catch GitHub web hook calls and process request"
+      FunctionName: "EmpCardLinkLambdaFunction"
+      Handler: "link_employee_and_access_card.handler"
+      MemorySize: 128
+      Role: !GetAtt EmpCardLinkLambdaFunctionRole.Arn
+      Runtime: "python3.8"
+      Timeout: 30
+
 Outputs:
 
   # LAMBDA FUNCTION: Retrieve Employee Records
@@ -205,4 +279,18 @@ Outputs:
     Value: !GetAtt  ListAccessCardStatusLambdaFunction.Arn
     Export:
       Name: !Sub "${AWS::StackName}-ListAccessCardStatusLambdaFunctionArn"
+
+  # LAMBDA FUNCTION: Link Employee to Access Card
+
+  EmpCardLinkLambdaFunctionName:
+    Description: "EmpCardLinkLambdaFunction NAME"
+    Value: !Ref EmpCardLinkLambdaFunction
+    Export:
+      Name: !Sub "${AWS::StackName}-EmpCardLinkLambdaFunctionName"
+
+  EmpCardLinkLambdaFunctionArn:
+    Description: "EmpCardLinkLambdaFunction ARN"
+    Value: !GetAtt  EmpCardLinkLambdaFunction.Arn
+    Export:
+      Name: !Sub "${AWS::StackName}-EmpCardLinkLambdaFunctionArn"
 
