lab3 - #29 Created lambda function and initial cloudformation template

--- a/labs/lab3-non-kinesis-example/cloudformation/1100_s3_events_bucket.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1100_s3_events_bucket.yaml
@@ -138,3 +138,9 @@ Outputs:
     Export:
       Name: !Sub "${AWS::StackName}-S3EventStoreBucketDomainName"
 
+  S3EventStoreNotificationQueueArn:
+    Description: "S3EventStoreNotificationQueue ARN"
+    Value: !GetAtt S3EventStoreNotificationQueue.Arn
+    Export:
+      Name: !Sub "${AWS::StackName}-S3EventStoreNotificationQueueArn"
+
