--- a/labs/lab3-non-kinesis-example/cloudformation/1100_s3_events_bucket.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1100_s3_events_bucket.yaml
@@ -138,6 +138,12 @@ Outputs:
     Export:
       Name: !Sub "${AWS::StackName}-S3EventStoreBucketDomainName"
 
+  S3EventStoreBucketDomainArn:
+    Description: "Bucket DomainName"
+    Value: !GetAtt S3EventStoreBucket.Arn
+    Export:
+      Name: !Sub "${AWS::StackName}-S3EventStoreBucketDomainArn"
+
   S3EventStoreNotificationQueueArn:
     Description: "S3EventStoreNotificationQueue ARN"
     Value: !GetAtt S3EventStoreNotificationQueue.Arn
