--- a/labs/lab3-non-kinesis-example/cloudformation/6000_s3_event_handler.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/6000_s3_event_handler.yaml
@@ -85,6 +85,7 @@ Resources:
             - "s3:GetObjectLegalHold"
             - "s3:GetObjectVersionAttributes"
             - "s3:GetObjectVersion"
+            - "s3:ListBucket"
             Resource:
             - Fn::Sub: 
               - "${BucketArn}"
@@ -114,7 +115,6 @@ Resources:
       - "arm64"
       Environment:
         Variables: 
-          # SQS_URL: !GetAtt GitHubSyncRequestQueue.QueueUrl
           DEBUG: "1"
       Code: 
         S3Bucket: !Ref S3SourceBucketParam
