--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
         "prepopulate",
         "Redrive",
         "RFID",
+        "routable",
         "setuptools",
         "Snyk",
         "strugling",
