lab3 - #29 added sns publish implementation

--- a/labs/lab3-non-kinesis-example/cloudformation/1200_s3_event_handler.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1200_s3_event_handler.yaml
@@ -95,6 +95,14 @@ Resources:
               - "${BucketArn}/*"
               - BucketArn: 
                   Fn::ImportValue: !Sub "${S3EventStackNameParam}-S3EventStoreBucketDomainArn"
+      - PolicyName: S3EventLambdaFunctionPolicy04
+        PolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+          - Effect: "Allow"
+            Action:
+            - "sns:Publish"
+            Resource: !Sub "arn:${AWS::Partition}:sns:${AWS::Region}:${AWS::AccountId}:*"
       RoleName: S3EventLambdaFunctionRole
 
   S3EventLambdaFunctionLogGroup:
