lab3 - #29 updated progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "architecting",
         "bbbbafd",
         "boto",
+        "botocore",
         "ccefab",
         "chkconfig",
         "clazz",
