lab3 - #30 Added queue outputs

--- a/labs/lab3-non-kinesis-example/cloudformation/1400_event_sqs_queue.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/1400_event_sqs_queue.yaml
@@ -78,13 +78,25 @@ Resources:
       - Ref: EventQueue
 
 
-# Outputs:
+Outputs:
 
-#   EventSnsTopicName:
-#     Description: "EventSnsTopic Name"
-#     Value: !GetAtt EventSnsTopic.TopicName
-#     Export:
-#       Name: !Sub "${AWS::StackName}-EventSnsTopicName"
+  EventQueueName:
+    Description: "EventQueue Name"
+    Value: !GetAtt EventQueue.QueueName
+    Export:
+      Name: !Sub "${AWS::StackName}-EventQueueName"
+
+  EventQueueArn:
+    Description: "EventQueue Arn"
+    Value: !GetAtt EventQueue.Arn
+    Export:
+      Name: !Sub "${AWS::StackName}-EventQueueArn"
+
+  EventQueueQueueUrl:
+    Description: "EventQueue QueueUrl"
+    Value: !GetAtt EventQueue.QueueUrl
+    Export:
+      Name: !Sub "${AWS::StackName}-EventQueueQueueUrl"
 
 
 
